--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-fade": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
+    "lenis": "^1.2.3",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
